--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -1030,9 +1030,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlenv",
+   "display_name": "mlen",
    "language": "python",
-   "name": "mlenv"
+   "name": "mlen"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1044,7 +1044,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
